--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -34,7 +34,7 @@ body,html {
 .playing {
   transform:scale(1.1);
   border-color:#ffc600;
-  box-shadow: 0 0 10px #ffc600;
+  box-shadow: 0 0 10px #26ff16;
 }
 
 kbd {
